Changed the file structue

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harmony Link</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
-<script src="main.js"></script>
+<script src="../static/js/main.js"></script>
 <body>
     <!-- Header -->
     <header>
@@ -20,7 +20,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li> 
             <li><a href="connect.html">Connect</a></li>
-            <li><a href="#support">Support</a></li>
+            <li><a href="support.html">Support</a></li>
             <li><a href="#engage">Engage</a></li>
             <li><a href="calender.html">Calendar</a></li>
             <li><a href="feedback.html">Feedback</a></li>
