--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,10 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li> 
-            <li><a href="connect.html">Connect</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="#engage">Engage</a></li>
+            <li><a href="volunteer.html">Volunteer</a></li>
+            <li><a href="donate.html">Donate</a></li>
             <li><a href="calender.html">Calendar</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
-            <li><a href="#resources">Resources</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
