--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -11,14 +11,12 @@
 <!-- Navigation Bar -->
 <nav>
    <ul>
-              <li><a href="index.html">Home</a></li>
-             <li><a href="about.html">About Us</a></li> 
-             <li><a href="connect.html">Connect</a></li>
-            <li><a href="#support">Support</a></li>
-            <li><a href="#engage">Engage</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li> 
+            <li><a href="volunteer.html">Volunteer</a></li>
+            <li><a href="donate.html">Donate</a></li>
             <li><a href="calender.html">Calendar</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
-            <li><a href="#resources">Resources</a></li>
+            <li><a href="community.html">Community</a></li>
             
         </ul>
 </nav>
