--- a/templates/user reg form.html
+++ b/templates/user reg form.html
@@ -19,6 +19,9 @@
 
     <form id="registration-form" action="process_registration.php" method="post">
         <!-- Registration Form Fields -->
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br>
+
         <label for="user_mail">Email:</label>
         <input type="email" id="user_mail" name="user_mail" required><br>
 
@@ -37,7 +40,7 @@
         <input type="submit" value="Register">
     </form>
 
-    <form id="login-form" action="process_login.php" method="post">
+    <form id="login-form" action="process_login.php" method="post" style="display: none;">
         <!-- Login Form Fields -->
         <label for="login_user">Username/Email:</label>
         <input type="text" id="login_user" name="login_user" required><br>
