--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect Page</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/volunteer.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
 
 <!-- Connect Page Sections -->
 <section class="connect-section">
-    <h2>Connect with Us</h2>
+    <h2 style="color: aliceblue;">Connect with Us</h2>
 
     <!-- Care Homes Directory Section -->
     <div class="directory-section">
