--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             <li><a href="about.html">About Us</a></li> 
             <li><a href="volunteer.html">Volunteer</a></li>
             <li><a href="donate.html">Donate</a></li>
-            <li><a href="calender.html">Calendar</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
             <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
