--- a/templates/user reg form.html
+++ b/templates/user reg form.html
@@ -40,13 +40,13 @@
         <input type="submit" value="Register">
     </form>
 
-    <form id="login-form" action="process_login.php" method="post" style="display: none;">
+    <form id="login-form" action="{{ url_for('login') }}" method="post" style="display: none;">
         <!-- Login Form Fields -->
-        <label for="login_user">Username/Email:</label>
-        <input type="text" id="login_user" name="login_user" required><br>
+        <label for="username">Username/Email:</label>
+        <input type="text" id="username" name="username" required><br>
 
-        <label for="login_password">Password:</label>
-        <input type="password" id="login_password" name="login_password" required><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br>
 
         <input type="submit" value="Login">
     </form>
