--- a/templates/donate.html
+++ b/templates/donate.html
@@ -123,10 +123,7 @@
         var localVendorDetails = document.getElementById("localVendorDetails");
         localVendorDetails.style.display = this.checked ? "block" : "none";
     });
-</script>
-    </section>
-<script>
-        document.getElementById('amount').addEventListener('change', function () {
+    document.getElementById('amount').addEventListener('change', function () {
             var customAmountDiv = document.getElementById('customAmountDiv');
             if (this.value === 'custom') {
                 customAmountDiv.style.display = 'block';
@@ -134,6 +131,10 @@
                 customAmountDiv.style.display = 'none';
             }
         });
+         document.getElementById("localVendor").addEventListener("change", function () {
+        var localVendorDetails = document.getElementById("localVendorDetails");
+        localVendorDetails.style.display = this.checked ? "block" : "none";
+    });
     </script>
     <footer>
         <p>&copy; 2024 Support Hub. All rights reserved.</p>
