--- a/templates/user reg form.html
+++ b/templates/user reg form.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <h2>{{ error_message }}</h2>
+
 <div class="form-container">
     <h2 id="form-title">User Registration</h2>
 
