--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harmony Link</title>
     <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <script src="../static/js/main.js"></script>
 <body>
@@ -12,6 +13,11 @@
     <header>
         <h1>Harmony Link</h1>
         <p>Bridging Lives, Reducing Waste, Weaving Sustainability</p>
+        <div ng-show="isLoggedIn">
+        {% if isLoggedIn %}
+            <i class="fas fa-user" style="font-size: 24px; color: #333; margin-right: 10px;"></i>
+        {% endif %}
+    </div>
     </header>
 
     <!-- Navigation Bar -->
