--- a/static/css/index.css
+++ b/static/css/index.css
@@ -192,6 +192,15 @@ footer p {
     font-size: 0.8rem;
 }
 
+.user-icon {
+    float: right;
+    font-size: 36px;
+    color: #333;
+    margin-right: 2px;
+    display: block;
+    margin-top: 10px;
+}
+
 /* Animations */
 @keyframes zoomIn {
     from {
