--- a/templates/donate.html
+++ b/templates/donate.html
@@ -126,7 +126,7 @@
     </script>
 
     <footer>
-        <p>&copy; 2024 Support Hub. All rights reserved.</p>
+        <p>&copy; 2024 Harmony Link | Contact: info@harmonylink.org</p>
     </footer>
 
 </body>
