--- a/templates/donate.html
+++ b/templates/donate.html
@@ -11,6 +11,16 @@
     <header>
         <h1>Donation and Support Hub</h1>
     </header>
+<nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li> 
+            <li><a href="volunteer.html">Volunteer</a></li>
+            <li><a href="donate.html">Donate</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="community.html">Community</a></li>
+        </ul>
+    </nav>
 <section>
     <div class="donation-form">
         <h2 onclick="toggleForm('donationForm')">Monetary Donation</h2>
